Changing JQuery embed to HTTPS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="aminoedit" class="aminoedit-pane"></div>
 
-    <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>  
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>  
     <script type="text/javascript" src="./js/aminoedit.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
     </head>
