--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <tr>
         <td><div class = "monster"></div></td>
         <td><p>pointing protein</p></td>
+        
       </tr>
       <tr>
         <td><div id="aminoedit" class="aminoedit-pane"></div></td>
@@ -18,6 +19,7 @@
         <td><p>encode button</p></td>
         <td><p>encode blurb</p></td>
       </tr>
+      <tr><td><p>instructions</p></td><td><p>instructions</p></td></tr>
     </table>
     <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>  
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>  
