--- a/index.html
+++ b/index.html
@@ -5,25 +5,20 @@
     <link rel="stylesheet" href="./app.css" type="text/css" media="screen">
   </head>
   <body>
-    <table style="width=100px">
-      <tr>
-        <td><div class="monster"></div></td>
-        <td><p>pointing protein</p></td>
-      </tr>
-      <tr>
-        <td><div id="aminoedit" class="aminoedit-pane"></div></td>
-        <td><p>aminoacids</p></td>
-      </tr>
-      <tr>
-        <td><p>encode button</p></td>
-        <td><p>encode blurb</p></td>
-      </tr>
-    </table>
-    <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>  
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>  
+    <div class="column-left">
+      <div id="cellanimation" class="cellanimation-pane"></div>
+      <div id="aminoedit" class="aminoedit-pane"></div>
+    </div>
+    <div class="column-right">
+      <div id="proteinindicator" class="proteinindicator-pane"></div>
+      <div id="proteininject" class="proteininject-button"></div>
+    </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script> 
+    <script type="text/javascript" src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
     <script type="text/javascript" src="./js/aminoedit.js"></script>
+    <script type="text/javascript" src="./js/proteinindicator.js"></script>
+    <script type="text/javascript" src="./js/cellanimation.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
-    <script src="http://code.createjs.com/easeljs-0.7.0.min.js"></script>
     <link href="./spriteTestC.css" rel="stylesheet" type="text/css"/>
   </body>
 </html>
