--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head><script src="js/directions.js" type="text/javascript" charset="utf-8"></script>
+  
     <title>Hack my Haploid</title>
     <link rel="stylesheet" href="./app.css" type="text/css" media="screen">
   </head>
   <body>
+    <div id="directions" class="directions-pane"></div>
     <div class="column-left">
       <div id="cellanimation" class="cellanimation-pane"></div>
       <div id="aminoedit" class="aminoedit-pane"></div>
@@ -18,7 +20,7 @@
     <script type="text/javascript" src="./js/aminoedit.js"></script>
     <script type="text/javascript" src="./js/proteinindicator.js"></script>
     <script type="text/javascript" src="./js/cellanimation.js"></script>
+    <script type="text/javascript" src="./js/directions.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
-    <link href="./spriteTestC.css" rel="stylesheet" type="text/css"/>
   </body>
 </html>
