Removing unnecessary <script> tag in head

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><script src="js/directions.js" type="text/javascript" charset="utf-8"></script>
-  
+  <head>
     <title>Hack my Haploid</title>
     <link rel="stylesheet" href="./app.css" type="text/css" media="screen">
   </head>
